# cjm-transcript-review

./: .gitignore  README.md  demo_app.py  html_ids.html  html_ids.html.md  index.html  index.html.md  models.html  models.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
cjm_transcript_review/: _modidx.py  html_ids.py  models.py  utils.py
cjm_transcript_review/components/: audio_controls.py  callbacks.py  card_stack_config.py  helpers.py  keyboard_config.py  review_card.py  step_renderer.py
cjm_transcript_review/routes/: audio.py  card_stack.py  commit.py  core.py  init.py
cjm_transcript_review/services/: graph.py
components/: audio_controls.html  audio_controls.html.md  callbacks.html  callbacks.html.md  card_stack_config.html  card_stack_config.html.md  helpers.html  helpers.html.md  keyboard_config.html  keyboard_config.html.md  review_card.html  review_card.html.md  step_renderer.html  step_renderer.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml  utils.ipynb
nbs/components/: audio_controls.ipynb  callbacks.ipynb  card_stack_config.ipynb  helpers.ipynb  keyboard_config.ipynb  review_card.ipynb  step_renderer.ipynb
nbs/routes/: audio.ipynb  card_stack.ipynb  commit.ipynb  core.ipynb  init.ipynb
nbs/services/: graph.ipynb
routes/: audio.html  audio.html.md  card_stack.html  card_stack.html.md  commit.html  commit.html.md  core.html  core.html.md  init.html  init.html.md
services/: graph.html  graph.html.md
