[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-review"
dynamic = ["version"]
description = "FastHTML Reader View component for verifying transcript segmentation with audio playback and context graph commit."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system', 'cjm-graph-plugin-system', 'cjm-graph-domains', 'python-fasthtml', 'cjm-fasthtml-app-core', 'cjm-fasthtml-daisyui', 'cjm-fasthtml-tailwind', 'cjm-fasthtml-interactions', 'cjm_fasthtml_lucide_icons', 'cjm_fasthtml_keyboard_navigation>=0.0.20', 'cjm_fasthtml_card_stack>=0.0.46', 'cjm_workflow_state', 'cjm_source_provider', 'cjm_transcript_source_select>=0.0.26', 'cjm_transcript_segmentation>=0.0.20', 'cjm_transcript_vad_align>=0.0.26', 'cjm_fasthtml_web_audio>=0.0.11', 'cjm_fasthtml_design_system>=0.0.7']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-review"
Documentation = "https://cj-mills.github.io/cjm-transcript-review"

[project.entry-points.nbdev]
cjm_transcript_review = "cjm_transcript_review._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_review.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_review*"]

[tool.nbdev]
