[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-review"
dynamic = ["version"]
description = "FastHTML Reader View component for verifying transcript segmentation with audio playback and context graph commit."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system>=0.0.30', 'cjm-graph-plugin-system>=0.0.6', 'cjm-graph-domains>=0.0.4', 'python-fasthtml', 'cjm-fasthtml-app-core>=0.0.20', 'cjm-fasthtml-daisyui>=0.0.15', 'cjm-fasthtml-tailwind>=0.0.44', 'cjm-fasthtml-interactions>=0.0.37', 'cjm_fasthtml_lucide_icons>=0.0.1', 'cjm_fasthtml_keyboard_navigation>=0.0.26', 'cjm_fasthtml_card_stack>=0.0.52', 'cjm_workflow_state>=0.0.3', 'cjm_source_provider>=0.0.1', 'cjm_transcript_source_select>=0.0.34', 'cjm_transcript_segmentation>=0.0.26', 'cjm_transcript_vad_align>=0.0.31', 'cjm_fasthtml_web_audio>=0.0.15', 'cjm_fasthtml_design_system>=0.0.12']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-review"
Documentation = "https://cj-mills.github.io/cjm-transcript-review"

[project.entry-points.nbdev]
cjm_transcript_review = "cjm_transcript_review._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_review.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_review*"]

[tool.nbdev]
